<resources>
    <string name="app_name">Mobile Dama Legends</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome Player</string>
    <string name="previous">Previous</string>
    <string name="signup">Signup</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="hello_first_fragment">Welcome to Mobile Dama Legends</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="getStarted">Let us Get Started</string>
    <string name="alreadyHaveAcc">Already Have an Account?</string>
    <string name="dontHaveAcc">Do not Have an Account?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="devoGrp">Developers</string>
    <string name="subong">Reynaldo Subong Jr.</string>
    <string name="duterte">Charniel Duterte</string>
    <string name="sanchez">Rafael Sanchez</string>
    <string name="cervantez">Joshua Cervantez</string>
    <string name="purpose">Mobile Dama Legends is an entertainment mobile application which is developed for school purposes only.</string>
    <string name="playText">Play</string>
    <string name="profileText">Profile</string>
    <string name="settingsText">Settings</string>
    <string name="backText">Back</string>
    <string name="logoutText">Logout</string>
    <string name="DrawText">Draw</string>
    <string name="namePlayer1">Player 1</string>
    <string name="namePlayer2">Player 2</string>
    <string name="namePlayer1mmr">3421</string>
    <string name="namePlayer2mmr">2353</string>

</resources>