<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_soft"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Welcome to Mobile Dama Legends!"
        android:textAlignment="center"
        android:textColor="#7DA4DF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:backgroundTint="#9BC4FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        app:backgroundTint="#9BC4FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:text="@string/about"
        android:textColor="#FFFFFF"
        app:backgroundTint="#9BC4FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_baseline_person_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/button_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="199dp"
        android:layout_height="213dp"
        android:src="@drawable/logopic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_baseline_person_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_about"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

</androidx.constraintlayout.widget.ConstraintLayout>